--- a/app/views/ratings/_form.html.erb
+++ b/app/views/ratings/_form.html.erb
@@ -22,8 +22,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :class_id %>
-    <%= form.text_field :class_id %>
+    <%= form.label :course_id %>
+    <%= form.text_field :course_id %>
   </div>
 
   <div class="actions">
