--- a/app/views/ratings/show.html.erb
+++ b/app/views/ratings/show.html.erb
@@ -11,8 +11,8 @@
 </p>
 
 <p>
-  <strong>Class:</strong>
-  <%= @rating.class_id %>
+  <strong>Course:</strong>
+  <%= @rating.course_id %>
 </p>
 
 <%= link_to 'Edit', edit_rating_path(@rating) %> |
