--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,13 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
  *= require_self
+ *= require courses
+ *= require ratings
+ *= require scaffolds
+ *= require teacher_courses
+ *= require teachers
+ *= require bootstrap.min.css
+ *= require paper-dashboard.min.css
+ *= require custom
  */
