--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,182 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Lovefridays</title>
+    <meta charset="utf-8" />
+    <link rel="apple-touch-icon" sizes="76x76" href="../apple-icon.png">
+    <link rel="icon" type="image/png" href="../favicon.png">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    
+    <title>
+      Love Fridays
+    </title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
+    
+    <!--     Fonts and icons     -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+
+    <!-- CSS Files -->
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  
+    <!-- JS Files -->
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <%= yield %>
+  <body class="">
+    <div class="wrapper ">
+
+      <!-- Sidebar -->
+      <div class="sidebar" data-color="white" data-active-color="danger">
+        <div class="logo">
+          <a href="/" class="simple-text logo-mini">
+            <div class="logo-image-small">
+              <%= image_pack_tag 'logo_degrade_transparente.png' %>
+            </div>
+          </a>
+          <a href="/" class="simple-text logo-normal">
+            Love Fridays
+          </a>
+        </div>
+        <div class="sidebar-wrapper">
+          <ul class="nav">
+            <li class="active ">
+              <a href="./index.html">
+                <i class="nc-icon nc-bank"></i>
+                <p>Home</p>
+              </a>
+            </li>
+            <li>
+              <a href="./teachers.html">
+                <i class="nc-icon nc-circle-10"></i>
+                <p>Teachers</p>
+              </a>
+            </li>
+            <li>
+              <a href="./courses.html">
+                <i class="nc-icon nc-align-left-2"></i>
+                <p>Courses</p>
+              </a>
+            </li>
+            <li>
+              <a href="./teacher_courses.html">
+                <i class="nc-icon nc-bell-55"></i>
+                <p>Classes</p>
+              </a>
+            </li>
+            <li>
+              <a href="./ratings.html">
+                <i class="nc-icon nc-chat-33"></i>
+                <p>Ratings</p>
+              </a>
+            </li>            
+          </ul>
+        </div>
+      </div>
+      <div class="main-panel">
+
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg navbar-absolute fixed-top navbar-transparent">
+          <div class="container-fluid">
+            <div class="navbar-wrapper">
+              <div class="navbar-toggle">
+                <button type="button" class="navbar-toggler">
+                  <span class="navbar-toggler-bar bar1"></span>
+                  <span class="navbar-toggler-bar bar2"></span>
+                  <span class="navbar-toggler-bar bar3"></span>
+                </button>
+              </div>
+            </div>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-bar navbar-kebab"></span>
+              <span class="navbar-toggler-bar navbar-kebab"></span>
+              <span class="navbar-toggler-bar navbar-kebab"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navigation">
+              <form>
+                <div class="input-group no-border">
+                  <input type="text" value="" class="form-control" placeholder="Search...">
+                  <div class="input-group-append">
+                    <div class="input-group-text">
+                      <i class="nc-icon nc-zoom-split"></i>
+                    </div>
+                  </div>
+                </div>
+              </form>
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link btn-magnify" href="#pablo">
+                    <i class="nc-icon nc-layout-11"></i>
+                    <p>
+                      <span class="d-lg-none d-md-block">Stats</span>
+                    </p>
+                  </a>
+                </li>
+                <li class="nav-item btn-rotate dropdown">
+                  <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="nc-icon nc-bell-55"></i>
+                    <p>
+                      <span class="d-lg-none d-md-block">Some Actions</span>
+                    </p>
+                  </a>
+                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                  </div>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link btn-rotate" href="#pablo">
+                    <i class="nc-icon nc-settings-gear-65"></i>
+                    <p>
+                      <span class="d-lg-none d-md-block">Account</span>
+                    </p>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+        <div class="content">
+          <div class="row">
+            <div class="col-12">
+              <div class="card">
+                <div class="card-header">
+                  <%= content_for :title %>
+                </div>
+                <div class="card-body">
+                  <%= yield %>
+                </div>                
+              </div>
+            </div>            
+          </div>          
+        </div>
+
+        <!-- Footer -->
+        <footer class="footer footer-black  footer-white ">
+          <div class="container-fluid">
+            <div class="row">
+              <nav class="footer-nav">
+                <ul>
+                  <li>
+                    <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>
+                  </li>
+                  <li>
+                    <a href="https://www.creative-tim.com/license" target="_blank">Licenses</a>
+                  </li>
+                </ul>
+              </nav>
+              <div class="credits ml-auto">
+                <span class="copyright">
+                  Layout made with <i class="fa fa-heart heart"></i> by Creative Tim
+                </span>
+              </div>
+            </div>
+          </div>
+        </footer>
+      </div>
+    </div>
   </body>
 </html>
