:bug: Fix bug with application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,31 +43,31 @@
         <div class="sidebar-wrapper">
           <ul class="nav">
             <li class="active ">
-              <a href="./index.html">
+              <a href="/index.html">
                 <i class="nc-icon nc-bank"></i>
                 <p>Home</p>
               </a>
             </li>
             <li>
-              <a href="./teachers.html">
+              <a href="/teachers.html">
                 <i class="nc-icon nc-circle-10"></i>
                 <p>Teachers</p>
               </a>
             </li>
             <li>
-              <a href="./courses.html">
+              <a href="/courses.html">
                 <i class="nc-icon nc-align-left-2"></i>
                 <p>Courses</p>
               </a>
             </li>
             <li>
-              <a href="./teacher_courses.html">
+              <a href="/teacher_courses.html">
                 <i class="nc-icon nc-bell-55"></i>
                 <p>Classes</p>
               </a>
             </li>
             <li>
-              <a href="./ratings.html">
+              <a href="/ratings.html">
                 <i class="nc-icon nc-chat-33"></i>
                 <p>Ratings</p>
               </a>
