:bug: Fix bug with enum select

--- a/app/views/teacher_courses/_form.html.erb
+++ b/app/views/teacher_courses/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div class="field">
     <%= form.label :semester %>
-    <%= form.select :bank_option, TeacherCourse.semesters, {include_blank: "Selecione um semestre"} %>
+    <%= form.select :semester, TeacherCourse.semesters.keys, {include_blank: "Selecione um semestre"} %>
   </div>
 
   <div class="field">
