:bug: Fix bug with wrong teacher_course reference

--- a/app/views/ratings/_form.html.erb
+++ b/app/views/ratings/_form.html.erb
@@ -22,8 +22,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :course_id %>
-    <%= form.text_field :course_id %>
+    <%= form.label :teacher_course_id %>
+    <%= form.text_field :teacher_course_id %>
   </div>
 
   <div class="actions">
