--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="../apple-icon.png">
-    <link rel="icon" type="image/png" href="../favicon.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon.png">
+    <link rel="icon" type="image/png" href="/favicon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     
     <title>
