--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -2,29 +2,40 @@
 
 <h1>Ratings</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Grade</th>
-      <th>Comment</th>
-      <th>Teacher course</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @ratings.each do |rating| %>
+<% if @ratings.count > 0 %>
+  <table>
+    <thead>
       <tr>
-        <td><%= rating.grade %></td>
-        <td><%= rating.comment %></td>
-        <td><%= rating.teacher_course_id %></td>
-        <td><%= link_to 'Show', rating %></td>
-        <td><%= link_to 'Edit', edit_rating_path(rating) %></td>
-        <td><%= link_to 'Destroy', rating, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Grade</th>
+        <th>Comment</th>
+        <th>Teacher course</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @ratings.each do |rating| %>
+        <tr>
+          <td><%= rating.grade %></td>
+          <td><%= rating.comment %></td>
+          <td><%= rating.teacher_course_id %></td>
+          <td><%= link_to 'Show', rating %></td>
+          <td><%= link_to 'Edit', edit_rating_path(rating) %></td>
+          <td><%= link_to 'Destroy', rating, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+<% else %>
+  <div
+    class="d-flex justify-content-center align-items-center"
+    style="height: 100px; background-color: #ef8157; border: 1px solid black; color: white">
+    
+    <span> 
+      Nenhum rating foi adicionado ainda! Crie um abaixo!
+    </span>
+  </div>
+<% end %>
 
 <br>
 
