:sparkles: Added notifications and removed notices

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -176,6 +176,8 @@
             </div>
           </div>
         </footer>
+
+        <%= render 'layouts/notifications' %>
       </div>
     </div>
   </body>
